syntax = "proto3";

package user;

service UserService {
  rpc GetUsers (Empty) returns (UserList);
  rpc GetUser (GetUserRequest) returns (User);
  rpc CreateUser (CreateUserRequest) returns (User);  // Added CreateUser RPC
}

message User {
  int32 id = 1;
  string name = 2;
  string secret = 3;
  repeated Permission permissions = 4;
  bool isAuth = 5;
  bool blocked = 6;
}

message UserList {
  repeated User users = 1;
}

message Empty {}

enum PermissionType {
  ADMIN = 0;
  USER = 1;
}

message Permission {
  int32 id = 1;
  PermissionType type = 2;
}

// Added CreateUserRequest message
message CreateUserRequest {
  string name = 1;
  string secret = 2;
  repeated Permission permissions = 3;
  bool isAuth = 4;
  bool blocked = 5;
}

message GetUserRequest {
  int32 id = 1;
}